--- a/flashcard-backend/public/admin.html
+++ b/flashcard-backend/public/admin.html
@@ -43,7 +43,8 @@
   </div>
 
   <script>
-    const BASE_URL = window.BASE_URL || 'http://localhost:5000';
+      const BASE_URL = '';
+
 
     // Basic guard: redirect non-admins (expects token/role in localStorage)
     (function guard() {
