--- a/flashcard-backend/public/createQuiz.html
+++ b/flashcard-backend/public/createQuiz.html
@@ -1,3 +1,6 @@
+<script src="/socket.io/socket.io.js"></script>
+
+
 <!DOCTYPE html>
 <link rel="icon" href="/images/quickflashfav.png" type="image/png">
 
@@ -102,7 +105,7 @@
 
 <script>
     // Check if user is admin and load appropriate sidebar
-    const role = localStorage.getItem('role');
+    const role = sessionStorage.getItem('role');
     const sidebarPath = role === 'admin' ? '/adminSidebar.html' : '/sidebar.html';
     
     fetch(sidebarPath)
@@ -119,7 +122,7 @@
             const logoutButton = document.getElementById('logoutButton');
             if (logoutButton) {
                 logoutButton.addEventListener('click', () => {
-                    localStorage.clear();
+                    sessionStorage.clear();
                     window.location.href = '/';
                 });
             }
@@ -190,7 +193,7 @@ async function submitQuiz() {
     });
   });
 
-  const token = localStorage.getItem('token');
+  const token = sessionStorage.getItem('token');
   const response = await fetch('/api/quizzes', {
     method: 'POST',
     headers: {
@@ -227,7 +230,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
   <script>
   async function loadSavedQuizzes() {
-    const token = localStorage.getItem('token');
+    const token = sessionStorage.getItem('token');
     try {
       const res = await fetch('/api/quizzes', {
         headers: {
@@ -244,7 +247,9 @@ document.addEventListener('DOMContentLoaded', () => {
       }
 
      quizzes.forEach(quiz => {
-  const box = document.createElement('div');
+const box = document.createElement('div');
+box.setAttribute('data-id', quiz._id); // 🔑 Add this
+
   box.style.border = '1px solid #000';
   box.style.padding = '10px';
   box.style.marginBottom = '10px';
@@ -327,8 +332,29 @@ deleteBtn.onclick = async () => {
         sidebar.classList.remove('expanded');
     });
   </script>
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  const socket = io();
+
+  socket.on('connect', () => {
+    console.log('✅ WebSocket connected');
+  });
+
+  socket.on('item-deleted', ({ type, id }) => {
+    if (type === 'quiz') {
+      document.querySelectorAll('#savedQuizzes > div').forEach(div => {
+        const quizId = div.getAttribute('data-id');
+        if (quizId === id) {
+          console.log(`🧹 Removing quiz ID ${id}`);
+          div.remove();
+        }
+      });
+    }
+  });
+</script>
+
+</script>
+
+
   </body>
   </html>
-
-</body>
-</html>
