--- a/flashcard-backend/public/takeQuiz.html
+++ b/flashcard-backend/public/takeQuiz.html
@@ -68,7 +68,7 @@
 
 
       try {
-        const token = localStorage.getItem('token');
+        const token = sessionStorage.getItem('token');
         const res = await fetch(`/api/quizzes/${quizId}`, {
           headers: {
             'Authorization': `Bearer ${token}`,
@@ -122,7 +122,7 @@
       }
 
       try {
-        const token = localStorage.getItem('token');
+        const token = sessionStorage.getItem('token');
         const res = await fetch(`/api/quizzes/${quizId}/submit`, {
           method: 'POST',
           headers: { 
